# livekit-shopping-list-voice-assistant

./: .env.example  README.md  agent.py  pyproject.toml  utils.py
